templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-grafana-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Вимкнення редиректу на HTTPS
spec:
  rules:
    - host: grafana.mari1327.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-grafana
                port:
                  number: 80
